--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Weather App</title>
 </head>
 
-<body class="overflow-hidden w-screen h-screen">
+<body class="overflow-x-hidden w-screen h-screen">
   <!-- استارت اولیه برنامه که برای بار اول نمایش داده میشود -->
   <div
     class="slides-start w-screen h-screen absolute top-0 left-0 flex *:shrink-0 *:bg-linear-to-b *:from-1A1635 *:via-7263DA *:w-screen *:h-screen *:relative">
