--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </svg>
   <main class="min-w-screen max-w-screen min-h-screen max-h-screen overflow-hidden flex justify-center items-center">
     <section
-      class="section min-w-screen max-w-screen min-h-screen max-h-screen overflow-hidden flex justify-start items-center flex-col *:w-full">
+      class="section min-w-screen max-w-screen min-h-screen max-h-screen overflow-hidden flex justify-around items-center flex-col *:w-full">
       <!-- main top -->
        <div class=" p-5 flex justify-around">
         <div>
@@ -95,12 +95,22 @@
         </div>
       </div>
       <!-- main bottom -->
-      <div class="">
-        <div>
-          <div></div>
-          <div></div>
-        </div>
+      <div class="absolute min-w-screen max-w-screen min-h-screen max-h-screen  searchc p-10">
         <div></div>
+        <div></div>
+        <div class="backgroundimg  gap-3 flex flex-col relative">
+<div>
+  <span class="text-BEB4FE text-6xl font-extrabold" >17°</span>
+</div>
+<div class="flex gap-3">
+  <div class="text-CCCCCC text-3xl font-semibold shadow-2xl opacity-50" ><span>H:23 </span></div>
+  <div class="text-CCCCCC text-3xl font-semibold shadow-2xl opacity-50" ><span>L:10</span></div>
+</div>
+<div><span class="text-FFFFFF text-4xl font-bold" >Tehran</span></div>
+<div class="absolute -top-10 -right-20 ">
+  <img src="assets/img/sun.png" alt="">
+</div>
+        </div>
       </div>
     </section>
   </main>
