--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
             <img src="assets/img/Rectangle 1 (1).png" alt="">
           </figure>
         </div>
-        <span class="min-w-8 max-w-8 min-h-8 max-h-8 flex justify-center items-center rounded-full bg-CCCCCC">1</span>
-        <span class="min-w-8 max-w-8 min-h-8 max-h-8 flex justify-center items-center rounded-full bg-CCCCCC">2</span>
+        <span class="min-w-8 max-w-8 min-h-8 max-h-8 flex justify-center items-center rounded-full bg-CCCCCC">&gt;</span>
+        <span class="min-w-8 max-w-8 min-h-8 max-h-8 flex justify-center items-center rounded-full bg-CCCCCC">&lt;</span>
       </div>
       <div class="w-[300px] h-[300px] flex justify-end items-end rounded-full absolute top-50z left-50z  bg-D4CEFF">
         <figure class="translate-10">
@@ -409,8 +409,8 @@
             <img src="assets/img/Rectangle 1 (1).png" alt="">
           </figure>
         </div>
-        <span class="min-w-8 max-w-8 min-h-8 max-h-8 flex justify-center items-center rounded-full bg-CCCCCC">1</span>
-        <span class="min-w-8 max-w-8 min-h-8 max-h-8 flex justify-center items-center rounded-full bg-CCCCCC">2</span>
+        <span class="min-w-8 max-w-8 min-h-8 max-h-8 flex justify-center items-center rounded-full bg-CCCCCC">&lt;</span>
+        <span class="min-w-8 max-w-8 min-h-8 max-h-8 flex justify-center items-center rounded-full bg-CCCCCC">&gt;</span>
       </div>
 
     </div>
