--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <!-- <meta name="theme-color" content="#29234e"> -->
+  <meta name="theme-color" content="#29234e">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   <link rel="stylesheet" href="assets/styles/style.css">
   <title>Weather App</title>
